--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,32 +1,55 @@
 [package]
 name = "chorus"
-version = "1.1.0"
+version = "0.1.0"
 edition = "2021"
+rust-version = "1.75"
 
 [dependencies]
+# Async runtime
 tokio = { version = "1.35", features = ["full"] }
-tokio-stream = "0.1"
-axum = "0.7"
-tower = "0.4"
-tower-http = { version = "0.5", features = ["cors", "trace"] }
+
+# HTTP server
+axum = { version = "0.7", features = ["macros"] }
+tower = { version = "0.4", features = ["full"] }
+tower-http = { version = "0.5", features = ["trace", "cors"] }
+
+# HTTP client
+reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
+
+# Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 toml = "0.8"
-reqwest = { version = "0.11", features = ["json", "stream"] }
-anyhow = "1.0"
+
+# Error handling
 thiserror = "1.0"
+anyhow = "1.0"
+
+# Logging & Tracing
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+
+# CLI
+clap = { version = "4.4", features = ["derive"] }
+
+# Utilities
+url = "2.5"
+chrono = { version = "0.4", features = ["serde"] }
+uuid = { version = "1.6", features = ["v4", "serde"] }
 futures = "0.3"
-async-recursion = "1.0"
+async-trait = "0.1"
 bytes = "1.5"
-chrono = "0.4"
-url = "2.4"
+pin-project-lite = "0.2"
+
+[dev-dependencies]
+tempfile = "3.8"
+mockito = "1.2"
+
+[[bin]]
+name = "chorus"
+path = "src/main.rs"
 
 [profile.release]
 opt-level = 3
 lto = true
 codegen-units = 1
-
-[dev-dependencies]
-toml = "0.8"
