--- a/.github/workflows/auto-idea-codex-loop.yml
+++ b/.github/workflows/auto-idea-codex-loop.yml
@@ -2,7 +2,7 @@ name: auto-idea-codex-loop
 
 on:
   push:
-  workflow_dispatch2:
+  workflow_dispatch_2:
 
 concurrency:
   group: auto-idea-codex-loop
