--- a/.github/workflows/auto-idea-codex-loop.yml
+++ b/.github/workflows/auto-idea-codex-loop.yml
@@ -2,6 +2,7 @@ name: auto-idea-codex-loop
 
 on:
   push:
+    branches: ["main"]
   workflow_dispatch:
 
 concurrency:
@@ -18,7 +19,7 @@ jobs:
 
     env:
       IFLOW_BASE_URL: https://apis.iflow.cn/v1
-      IFLOW_MODEL: glm-4.6
+      IFLOW_MODEL: "glm-4.6"  # 建议加上引号
       IDEA_MAX_ROUNDS: "8"
 
     steps:
@@ -121,24 +122,20 @@ jobs:
         run: |
           mkdir -p ~/.codex
 
-          # 按你的要求创建 config.toml（key 从 Secrets 注入，避免硬编码）
-          cat > ~/.codex/config.toml <<TOML
-          model = "glm-4.6"
-          model_provider = "iflow"
-          preferred_auth_method = "env"
-
-          [model_providers.iflow]
-          name = "iflow"
-          base_url = "https://apis.iflow.cn/v1"
-          wire_api = "responses"
-          TOML
+          # 按你的要求创建 config.toml（使用 echo 避免缩进问题）
+          {
+            echo 'model = "glm-4.6"'
+            echo 'model_provider = "iflow"'
+            echo 'preferred_auth_method = "env"'
+            echo ''
+            echo '[model_providers.iflow]'
+            echo 'name = "iflow"'
+            echo 'base_url = "https://apis.iflow.cn/v1"'
+            echo 'wire_api = "responses"'
+          } > ~/.codex/config.toml
 
           # 按你的要求创建 auth.json（key 从 Secrets 注入，避免硬编码）
-          cat > ~/.codex/auth.json <<JSON
-          {
-            "OPENAI_API_KEY":"${IFLOW_API_KEY}"
-          }
-          JSON
+          echo "{\"OPENAI_API_KEY\":\"${IFLOW_API_KEY}\"}" > ~/.codex/auth.json
 
       - name: Sanity test Codex can run
         env:
@@ -156,20 +153,20 @@ jobs:
           export OPENAI_API_KEY="$IFLOW_API_KEY"
           IDEA="$(cat "${RUNNER_TEMP}/idea.txt")"
 
-          # Write the full prompt to a file (avoids YAML multi‑line quoting issues)
+          # Write the full prompt to a file (使用 echo 避免缩进问题)
           PROMPT_FILE="${RUNNER_TEMP}/prompt.txt"
-          cat > "$PROMPT_FILE" <<EOF
-你将把下面这个"提升 LLM 智力的全新 workflow 点子"落地为一个可运行的最小原型仓库。
-
-要求：
-1) 生成 README.md：讲清楚 workflow 的目标、步骤、输入输出、如何运行
-2) 给出一个最小可运行 demo（例如 scripts/ 或 src/），能在 CI 上执行
-3) 提供一个简单的自检（例如运行脚本输出关键结果）
-4) 不要泄露任何密钥，不要把 ~/.codex 或 auth/config 写入仓库
-
-点子如下（原样粘贴）：
- ${IDEA}
-EOF
+          {
+            echo "你将把下面这个\"提升 LLM 智力的全新 workflow 点子\"落地为一个可运行的最小原型仓库。"
+            echo ""
+            echo "要求："
+            echo "1) 生成 README.md：讲清楚 workflow 的目标、步骤、输入输出、如何运行"
+            echo "2) 给出一个最小可运行 demo（例如 scripts/ 或 src/），能在 CI 上执行"
+            echo "3) 提供一个简单的自检（例如运行脚本输出关键结果）"
+            echo "4) 不要泄露任何密钥，不要把 ~/.codex 或 auth/config 写入仓库"
+            echo ""
+            echo "点子如下（原样粘贴）："
+            echo " ${IDEA}"
+          } > "$PROMPT_FILE"
 
           # Feed the prompt to codex
           codex --full-auto "$(cat "$PROMPT_FILE")" --dangerously-bypass-approvals-and-sandbox
@@ -210,13 +207,11 @@ EOF
         if: steps.once.outputs.run_watchdog == '1'
         run: |
           mkdir -p results/once
-          cat > results/once/typus_watchdog_done.json <<EOF
-          {
-            "ran": true,
-            "ts_utc": "$(date -u +'%Y-%m-%dT%H:%M:%SZ')",
-            "run_id": "${GITHUB_RUN_ID}"
-          }
-          EOF
+          # 使用 printf 避免 Here Doc 缩进问题
+          printf '{"ran":true,"ts_utc":"%s","run_id":"%s"}\n' \
+            "$(date -u +'%Y-%m-%dT%H:%M:%SZ')" \
+            "${GITHUB_RUN_ID}" \
+            > results/once/typus_watchdog_done.json
 
       - name: Commit and push main
         env:
