--- a/.github/workflows/auto-idea-codex-loop.yml
+++ b/.github/workflows/auto-idea-codex-loop.yml
@@ -76,7 +76,7 @@ jobs:
               sudo apt-get update
               sudo apt-get install -y nodejs npm
             fi
-            npm install -g @openai/codex@0.3.3 || npm install -g codex@0.3.3 || true
+            npm install -g @openai/codex@latest || npm install -g codex@latest || true
             command -v codex
             codex --version || true
           fi
