--- a/.github/workflows/auto-idea-codex-loop.yml
+++ b/.github/workflows/auto-idea-codex-loop.yml
@@ -58,7 +58,7 @@ jobs:
         run: |
           python scripts/generate_idea.py "${RUNNER_TEMP}/idea.txt"
 
-      # ========= 创建分支、清空旧代码、用 codex 落地 =========
+      # ========= 创建分支、用 codex 落地 =========
       - name: Create new branch
         run: |
           git config user.name "github-actions[bot]"
@@ -67,58 +67,56 @@ jobs:
           BRANCH="${{ steps.bn.outputs.branch_name }}"
           git checkout -b "$BRANCH"
 
-      - name: Install Codex CLI
+      # 用 setup-node 保证 npm 一定存在且版本稳定（比 apt-get 更稳）
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install Codex CLI (latest)
         run: |
           if command -v codex >/dev/null 2>&1; then
-            codex --version || true
-          else
-            if ! command -v npm >/dev/null 2>&1; then
-              sudo apt-get update
-              sudo apt-get install -y nodejs npm
-            fi
-            npm install -g @openai/codex@latest || npm install -g codex@latest || true
-            command -v codex
-            codex --version || true
+            codex --version
+            exit 0
           fi
 
-      - name: Write Codex config and auth (runtime only)
-        env:
-          IFLOW_API_KEY: ${{ secrets.IFLOW_API_KEY }}
+          npm i -g @openai/codex@latest
+          codex --version
+
+      - name: Write Codex config (runtime only)
         run: |
           mkdir -p ~/.codex
 
-          # 创建 config.toml
-          {
-            echo 'model = "glm-4.6"'
-            echo 'model_provider = "iflow"'
-            echo 'preferred_auth_method = "env"'
-            echo ''
-            echo '[model_providers.iflow]'
-            echo 'name = "iflow"'
-            echo 'base_url = "https://apis.iflow.cn/v1"'
-            echo 'wire_api = "responses"'
-          } > ~/.codex/config.toml
+          cat > ~/.codex/config.toml <<'TOML'
+          model = "glm-4.6"
+          model_provider = "iflow"
+          preferred_auth_method = "apikey"
 
-          # 创建 auth.json
-          echo "{\"OPENAI_API_KEY\":\"${IFLOW_API_KEY}\"}" > ~/.codex/auth.json
+          # 避免 CI 卡住：不弹审批；同时保留 sandbox 限制（更安全）
+          approval_policy = "never"
+          sandbox_mode = "workspace-write"
+
+          [model_providers.iflow]
+          name = "iflow"
+          base_url = "https://apis.iflow.cn/v1"
+          env_key = "IFLOW_API_KEY"
+          wire_api = "responses"
+          query_params = {}
+          TOML
 
       - name: Sanity test Codex can run
         env:
           IFLOW_API_KEY: ${{ secrets.IFLOW_API_KEY }}
         run: |
-          # 修复：使用 echo 通过管道传递命令，避免终端检测问题
-          export OPENAI_API_KEY="$IFLOW_API_KEY"
-          echo "Create a file CODEX_SMOKE_TEST.md with content 'ok'." | codex --dangerously-bypass-approvals-and-sandbox
+          printf "%s\n" "Create a file CODEX_SMOKE_TEST.md with content 'ok'." | codex
           test -f CODEX_SMOKE_TEST.md
 
       - name: Codex implement the idea
         env:
           IFLOW_API_KEY: ${{ secrets.IFLOW_API_KEY }}
         run: |
-          export OPENAI_API_KEY="$IFLOW_API_KEY"
           IDEA="$(cat "${RUNNER_TEMP}/idea.txt")"
 
-          # 创建提示文件
           PROMPT_FILE="${RUNNER_TEMP}/prompt.txt"
           {
             echo "你将把下面这个\"提升 LLM 智力的全新 workflow 点子\"落地为一个可运行的最小原型仓库。"
@@ -127,14 +125,13 @@ jobs:
             echo "1) 生成 README.md：讲清楚 workflow 的目标、步骤、输入输出、如何运行"
             echo "2) 给出一个最小可运行 demo（例如 scripts/ 或 src/），能在 CI 上执行"
             echo "3) 提供一个简单的自检（例如运行脚本输出关键结果）"
-            echo "4) 不要泄露任何密钥，不要把 ~/.codex 或 auth/config 写入仓库"
+            echo "4) 不要泄露任何密钥，不要把 ~/.codex 写入仓库"
             echo ""
             echo "点子如下（原样粘贴）："
-            echo " ${IDEA}"
+            echo "${IDEA}"
           } > "$PROMPT_FILE"
 
-          # 修复：使用 cat 通过管道传递提示，避免终端检测问题
-          cat "$PROMPT_FILE" | codex --full-auto --dangerously-bypass-approvals-and-sandbox
+          cat "$PROMPT_FILE" | codex
 
           git add -A
           git commit -m "feat: implement idea via codex" || true
