更新 auto-idea-codex-loop.yml

--- a/.github/workflows/auto-idea-codex-loop.yml
+++ b/.github/workflows/auto-idea-codex-loop.yml
@@ -19,7 +19,7 @@ jobs:
 
     env:
       IFLOW_BASE_URL: https://apis.iflow.cn/v1
-      IFLOW_MODEL: "glm-4.6"
+      IFLOW_MODEL_NAME: "glm-4.6"
       IDEA_MAX_ROUNDS: "8"
       IFLOW_API_KEY: ${{ secrets.IFLOW_API_KEY }}
 
